--- a/src/main/deploy/1100_config.json
+++ b/src/main/deploy/1100_config.json
@@ -73,6 +73,7 @@
         {"varName" : "kD", "value" : 0}
    ],
    "LED" : [
+        {"varName" : "LEDPort", "value": 1},
         {"varName" : "stateChangeWarningTime", "value" : 1.5 }
    ],
 
